// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > renders with background color on other pages 1`] = `
<div>
  <header
    class="relative bg-background-secondary dark:bg-background-secondary"
  >
    <div
      class="container mx-auto py-5"
    >
      <div
        class="flex items-center justify-between"
      >
        <a
          class="font-semibold inline-flex items-center gap-1"
          data-discover="true"
          href="/"
        >
          <img
            alt="Logo"
            class="w-12 h-12"
            src="/logo-icon.png"
          />
        </a>
        <nav
          class="flex items-center lg:gap-10 gap-5 font-bold font-merriweather"
        >
          <a
            class="inline-flex items-center gap-1 dark:text-primary hover:text-primary/80 font-bold text-primary uppercase"
            data-discover="true"
            href="/about"
          >
            Про Нас
          </a>
          <a
            class="inline-flex items-center gap-1 dark:text-primary hover:text-primary/80 font-bold text-primary uppercase"
            data-discover="true"
            href="/contact"
          >
            Контакты
          </a>
          <a
            class="inline-flex items-center gap-1 dark:text-primary hover:text-primary/80 font-bold text-primary uppercase"
            data-discover="true"
            href="/blog"
          >
            Блог
          </a>
        </nav>
        <div
          class="flex items-center gap-5"
        >
          <a
            class="font-semibold inline-flex items-center gap-1 px-2 py-1 bg-primary text-primary-foreground hover:bg-primary/80 rounded-md hover:no-underline"
            data-discover="true"
            href="/login"
          >
            Войти
          </a>
          <button
            class="cursor-pointer w-fit h-fit font-semibold text-primary-dark dark:text-primary hover:bg-primary-dark/15 dark:hover:bg-primary/15 disabled:opacity-50 disabled:cursor-not-allowed text-base rounded-md p-1"
            title="Dark mode"
          >
            <div
              style="position: relative; width: 24px; height: 24px;"
            >
              <div
                data-testid="sun-icon"
                style="position: absolute; inset: 0; opacity: 1; transform: none;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sun text-yellow-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="4"
                  />
                  <path
                    d="M12 2v2"
                  />
                  <path
                    d="M12 20v2"
                  />
                  <path
                    d="m4.93 4.93 1.41 1.41"
                  />
                  <path
                    d="m17.66 17.66 1.41 1.41"
                  />
                  <path
                    d="M2 12h2"
                  />
                  <path
                    d="M20 12h2"
                  />
                  <path
                    d="m6.34 17.66-1.41 1.41"
                  />
                  <path
                    d="m19.07 4.93-1.41 1.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header > renders with transparent background on / page 1`] = `
<div>
  <header
    class="bg-transparent fixed top-0 left-0 right-0 z-50"
  >
    <div
      class="container mx-auto py-5"
    >
      <div
        class="flex items-center justify-between"
      >
        <a
          class="font-semibold inline-flex items-center gap-1"
          data-discover="true"
          href="/"
        >
          <img
            alt="Logo"
            class="w-12 h-12"
            src="/logo-icon.png"
          />
        </a>
        <nav
          class="flex items-center lg:gap-10 gap-5 font-bold font-merriweather"
        >
          <a
            class="inline-flex items-center gap-1 dark:text-primary hover:text-primary/80 font-bold text-primary uppercase"
            data-discover="true"
            href="/about"
          >
            Про Нас
          </a>
          <a
            class="inline-flex items-center gap-1 dark:text-primary hover:text-primary/80 font-bold text-primary uppercase"
            data-discover="true"
            href="/contact"
          >
            Контакты
          </a>
          <a
            class="inline-flex items-center gap-1 dark:text-primary hover:text-primary/80 font-bold text-primary uppercase"
            data-discover="true"
            href="/blog"
          >
            Блог
          </a>
        </nav>
        <div
          class="flex items-center gap-5"
        >
          <a
            class="font-semibold inline-flex items-center gap-1 px-2 py-1 bg-primary text-primary-foreground hover:bg-primary/80 rounded-md hover:no-underline"
            data-discover="true"
            href="/login"
          >
            Войти
          </a>
          <button
            class="cursor-pointer w-fit h-fit font-semibold text-primary-dark dark:text-primary hover:bg-primary-dark/15 dark:hover:bg-primary/15 disabled:opacity-50 disabled:cursor-not-allowed text-base rounded-md p-1"
            title="Dark mode"
          >
            <div
              style="position: relative; width: 24px; height: 24px;"
            >
              <div
                data-testid="sun-icon"
                style="position: absolute; inset: 0; opacity: 1; transform: none;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sun text-yellow-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="4"
                  />
                  <path
                    d="M12 2v2"
                  />
                  <path
                    d="M12 20v2"
                  />
                  <path
                    d="m4.93 4.93 1.41 1.41"
                  />
                  <path
                    d="m17.66 17.66 1.41 1.41"
                  />
                  <path
                    d="M2 12h2"
                  />
                  <path
                    d="M20 12h2"
                  />
                  <path
                    d="m6.34 17.66-1.41 1.41"
                  />
                  <path
                    d="m19.07 4.93-1.41 1.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;
